Test of user address

--- a/covid_web/templates/details.html
+++ b/covid_web/templates/details.html
@@ -85,7 +85,7 @@ user: {{user_country}}
                                 </div>
                             </form>
                             <div class="detail" style="padding: 1px; font-size: 1.50rem;">
-                                <p><span id="date" class="text-dark" style="font-size:1rem"></span></p>
+                                <p><span id="date" class="text-dark" style="font-size:1rem"></span>{{user_location}}</p>
                                 <script>
                                     dt = new Date();
                                     y = dt.getFullYear();
