--- a/covid_web/templates/th_map.html
+++ b/covid_web/templates/th_map.html
@@ -24,6 +24,7 @@
     </style>
 </head>
 <body>
+<h1>Province: {{province}}</h1>
 <h1>Total Cases: {{totalconfirm}}</h1>
     <div class="mapdiv">
         <svg version="1.2" viewbox="0 0 1000 1837" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xhtml">
