change path of picture

--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -16,7 +16,7 @@
         <!-- First slide -->
         <div class="carousel-item active text-center">
           {% load static %}
-          <img class="d-block w-100" src="{% static 'images/slide1.png' %}" alt="First slide">
+          <img class="d-block w-100" src="https://github.com/lisbono2001/Covid19-Tracker/blob/master/covid_web/static/images/slide1.png?raw=true" alt="First slide">
           <div class="centered">
             <h1 style="font-size:6vw;"><b>Covid19-Tracker</b></h1>
             <p style="font-size:2vw;">Date: <span id="date"></span></p>
@@ -32,7 +32,7 @@
         <!-- Second slide -->
         <div class="carousel-item text-center">
           {% load static %}
-          <img class="d-block w-100" src="{% static 'images/slide2.png' %}" alt="Second slide">
+          <img class="d-block w-100" src="https://github.com/lisbono2001/Covid19-Tracker/blob/master/covid_web/static/images/slide2.png?raw=true" alt="Second slide">
           <div class="container-fluid centered" style="color:black;">
             <h1 style="font-size:4vw;" ><b>Today Data</b></h1>
             <div class="row">
@@ -56,7 +56,7 @@
         <!-- Third slide -->
         <div class="carousel-item text-center">
           {% load static %}
-          <img class="d-block w-100" src="{% static 'images/slide3.png' %}" alt="Third slide">
+          <img class="d-block w-100" src="https://github.com/lisbono2001/Covid19-Tracker/blob/master/covid_web/static/images/slide3.png?raw=true" alt="Third slide">
         </div>
       </div>
 
@@ -124,13 +124,13 @@ This is a massive contrast with the original Sars-coronavirus, back in 2002. It 
             <div class="col pt-2">
               <a href="{% url 'social:begin' 'google-oauth2' %}">
                 {% load static %}
-                <img src={% static 'images/google_login.png' %} style="width:230px;height:38px;">
+                <img src="https://github.com/lisbono2001/Covid19-Tracker/blob/master/covid_web/static/images/google_login.png?raw=true" style="width:230px;height:38px;">
               </a>
             </div>
             <div class="col pt-2">
               <a href="{% url 'social:begin' 'github' %}">
                 {% load static %}
-                <img src={% static 'images/github_logo.png' %} style="width:230px;height:38px;">
+                <img src=https://github.com/lisbono2001/Covid19-Tracker/blob/master/covid_web/static/images/github_logo.png?raw=true style="width:230px;height:38px;">
               </a>
             </div>
           </div>
