--- a/covid_web/templates/details.html
+++ b/covid_web/templates/details.html
@@ -114,7 +114,7 @@
                             </div>
                         </div>
                         <div class="col-4">
-                            <div class="container">
+                            <div class="container-fluid">
                                 <ul>
                                     <table>
                                       <tr>
