--- a/covid_web/templates/th_map.html
+++ b/covid_web/templates/th_map.html
@@ -32,7 +32,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                    Welcome <b>{{ user.get_username }}</b> Location: <b>{{user_country}}</b> IP: <b>{{ip}}</b><br>
+                  Welcome <b>{{ user.get_username }}</b> Location: <b>{{ location }}</b> <b>{{user_country}}</b> IP: <b>{{ip}}</b><br>
               </li>
           </ul>
           <ul class="navbar-nav">
