--- a/covid_web/templates/details.html
+++ b/covid_web/templates/details.html
@@ -96,7 +96,7 @@
                                     document.getElementById("date").innerHTML = y + "-" + m + "-" + d;
                                 </script>
                                 {% if name != '' %} <p>Country: <b>{{name}}</b> </p>{%endif%}
-                                <p> Total Confirm Cases : <span class="text-danger"><strong>{{totalconfirm}}</strong></span></p>
+                                <p> Total Confirm Cases : <span class="text-danger" id="Total-comfirm" ><strong>{{totalconfirm}}</strong></span></p>
                                 <p> New Confirm Cases : <span class="text-danger"><strong>{{newconfirm}}</strong></span></p>
                                 <p> New Deaths : <span class="text-dark"><strong>{{newdeaths}}</strong></span></p>
                                 <p> Total Deaths : <span class="text-mudarkted"><strong>{{totaldeaths}}</strong></span></p>
