--- a/covid_web/templates/details.html
+++ b/covid_web/templates/details.html
@@ -46,7 +46,7 @@
                     <script>
                         var first = null
                         function start(){ 
-                            if(document.getElementById("country").innerHTML == "Japan"){
+                            if(document.getElementById("country-name").innerHTML == "Japan"){
                                 var data = { zoom: 5, center: {lat:35.652832, lng:139.839478}}
                             }
                             else{
